# flask-wsgi

./: .bumpversion.cfg  .gitignore  README.rst  dev.env  pyproject.toml  requirements.in  requirements.txt  setup.py
flask_app/: app.py  wsgi.py
